--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
     "@mui/styled-engine-sc": "^7.3.7",
-    "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.4",
     "framer-motion": "^12.29.2",
     "prismjs": "^1.30.0",
@@ -24,8 +23,9 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
+    "sass": "^1.97.3",
     "styled-components": "^6.3.8",
-    "tailwindcss": "^4.1.18"
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
