--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
+    "react-typed": "^2.0.12",
     "sass": "^1.97.3",
     "styled-components": "^6.3.8",
     "uninstall": "^0.0.0"
